a_d.css
/* ... */
.comment .tagline { display: block; }

.tagline, .search-result-meta { color: #333333; font-size: 1.1rem; }

.tagline a, .search-result-meta a { color: inherit; }

.entry .buttons > li, .entry .buttons > li + li { padding: 0; }
.entry .buttons > li a { font-weight: normal; font-size: 1.1rem; color: #7b929d; text-transform: capitalize; padding: 2px 6px; border-radius: 3px; }
.entry .buttons > li a:hover { color: black; text-decoration: none; }
.entry .buttons > li:first-of-type a { padding-left: 0; }

.panestack-title { margin: 10px -10px; padding: 15px 20px 10px 20px; border-top: 1px solid #e0e0e0; border-bottom: none; text-transform: capitalize; }

.wiki-page .wikititle, .wiki-page .pageactions { display: inline-block; margin: 0 10px 15px 0; }
.wiki-page .wiki-page-content { margin: 0; }

.wiki-page-content .md pre { border-color: #cccccc; }

.commentarea .menuarea, .sheets { margin-right: 0; }

.gold-accent.comment-visits-box { max-width: none !important; display: block; }

body.pinHeader-sub #sr-header-area:not(:hover), body.pinHeader-subanduser #sr-header-area:not(:hover) { background: linear-gradient(rgba(0, 0, 0, 0.3) 0px, rgba(0, 0, 0, 0.15) 22px); }
body.pinHeader-sub #header-bottom-left, body.pinHeader-subanduser #header-bottom-left { margin-top: 0; background: none; }
body.pinHeader-sub #header-bottom-right, body.pinHeader-subanduser #header-bottom-right { top: 22px !important; }

div.imgCaptions, .md div.imgCaptions { white-space: normal; }

.link .entry.RES-keyNav-activeElement { background-color: transparent !important; box-shadow: -3px 0 0 0 #0079d3; }

.link .entry.RES-keyNav-activeElement .md-container { background-color: transparent !important; }

.comment .entry.RES-keyNav-activeElement, .comment .entry.RES-keyNav-activeElement .md-container { background-color: transparent !important; }

.comment .entry.RES-keyNav-activeElement .tagline, .comment.morechildren .entry.RES-keyNav-activeElement { color: black; background-color: rgba(0, 0, 0, 0.12) !important; border-radius: 5px; }

.md h1, .md h2, .md h3, .md h4, .md h5, .md h6, .side .md h1, .side .md h2, .side .md h3, .side .md h4, .side .md h5, .side .md h6, .wiki-page-content .md h1, .wiki-page-content .md h2, .wiki-page-content .md h3, .wiki-page-content .md h4, .wiki-page-content .md h5, .wiki-page-content .md h6, h2#wiki_heading_2 { color: inherit; font-weight: normal; font-family: tahoma, arial, sans-serif; line-height: 1; margin: 1.2em 0 .5em; }

.md h1 { font-size: 2rem; }

.side .md h1, .wiki-page-content .md h1 { font-size: 2.25rem; margin: .5em 0 .5em; }

.side .md h2, .wiki-page-content .md h2 { font-size: 2rem; }

.side .md h3, .wiki-page-content .md h3 { font-size: 1.75rem; font-weight: normal; }

.side .md h4, .wiki-page-content .md h4 { font-size: 1.6rem; font-style: normal; }

.side .md h5, .wiki-page-content .md h5 { font-size: 1.4rem; text-decoration: none; }

.side .md h6, .wiki-page-content .md h6 { font-size: 1.3rem; text-decoration: none; text-transform: none; }

.side .md ul { padding-left: 16px; }
.side .md ul, .side .md ol { margin-top: 10px; margin-bottom: 10px; }
.side .md ul li, .side .md ol li { line-height: 1.6; }
.side .md p { line-height: 1.6; }

/*addon blockquote-cards*/
.side .md > blockquote { margin: 16px 0; padding: 10px; border-width: 0 0 3px 0; background: #0099cc; border-radius: 3px; border-style: solid; border-color: rgba(0, 0, 0, 0.18); color: white; }
.side .md > blockquote h2 { margin: 0 0 10px 0; }
.side .md > blockquote a, .side .md > blockquote a:visited { color: white; border-bottom: 1px solid rgba(255, 255, 255, 0.4); }
.side .md > blockquote a:hover, .side .md > blockquote a:visited:hover { border-bottom-color: rgba(255, 255, 255, 0.8); text-decoration: none; }
.side .md > blockquote a[title="click"] { color: black; background-color: white; }

.side .md > h1 + blockquote { background-color: #4d4d4d; }
.side .md > h2 + blockquote { background-color: #c32222; }
.side .md > h3 + blockquote { background-color: #da730b; }
.side .md > h4 + blockquote { background-color: #c3228e; }
.side .md > h5 + blockquote { background-color: #7322c3; }
.side .md > h6 + blockquote { background-color: #11973e; }

/*.end*/
.link .usertext .usertext-edit > .md { padding-left: 0; }

.usertext .bottom-area { overflow: visible; width: auto; min-height: 32px; }

.usertext .help-toggle, .usertext a.reddiquette { line-height: 32px; margin: 0 5px; }

.usertext .help-toggle a, .usertext a.reddiquette { color: #999999; }

body:not(.submit-page) .usertext-buttons { padding-bottom: 7px; }

.usertext-buttons .status { font-size: 1rem; }

/*addon side-menu*/
.side .md > h5 + ul { margin: 8px -10px 16px -10px; padding: 0; list-style: none; font-size: 1.4rem; cursor: default; }
.side .md > h5 + ul > li { padding: 6px 8px 6px 24px; position: relative; transition: background .1s; }
.side .md > h5 + ul > li:hover > ul { visibility: visible; opacity: 1; right: 296px; }
.side .md > h5 + ul > li > sup, .side .md > h5 + ul > li > p sup { position: absolute; top: 11px; left: 8px; display: block; overflow: hidden; text-indent: -1000px; width: 10px; height: 12px; opacity: .4; background-position: -20px -22px; background-image: url(%%sprite%%); pointer-events: none; }
.side .md > h5 + ul > li > p, .side .md > h5 + ul > li > ul > li > p { margin: 0; }
.side .md > h5 + ul > li > a, .side .md > h5 + ul > li > p > a { color: #0079d3; display: block; margin: -6px -8px -6px -32px; padding: 6px 8px 6px 32px; white-space: nowrap; overflow-x: hidden; text-overflow: ellipsis; text-decoration: none; }
.side .md > h5 + ul > li:hover, .side .md > h5 + ul > li > ul > li:hover > a { background: #ededed; }
.side .md > h5 + ul > li:hover > p > a, .side .md > h5 + ul > li > ul > li > a:hover, .side .md > h5 + ul > li > ul > li > p a:hover { color: #0079d3; text-decoration: none; }
/* ... */

